OLD/tests/expects/match_failure/test_match_no_wildcard.truk
fn main() : i32 {
  var x: i32 = 5;
  match x {
    case 0 => return 0,
    case 1 => return 1,
  }
  return 0;
}
